--- a/css/desktop.css
+++ b/css/desktop.css
@@ -297,6 +297,18 @@
     font-size: 3rem;
   }
 
+  #div-section-p {
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.75rem;
+  }
+
+  #div-menu-last {
+    justify-content: flex-start;
+}
+
   #menu-close-btn {
     width: 32px;
     margin: 0;
